[package]
name = "arc"
version = "0.1.0"
authors = ["Freddy Wordingham <fjmw201@exeter.ac.uk>"]
edition = "2018"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
attr = { path = "res/crates/attr" }
proc = { path = "res/crates/proc" }

colog = "0.2.1"
colored = "1.9.2"
terminal_size = "0.1.10"
