[package]
name = "arc"
version = "0.1.0"
authors = ["Freddy Wordingham <fjmw201@exeter.ac.uk>"]
edition = "2018"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
attr = { path = "res/crates/attr" }
proc = { path = "res/crates/proc" }

colog = "0.2.1"
colored = "1.9.2"
indicatif = "0.13.0"
json5 = "0.2.5"
log = "0.4.8"
nalgebra = { version = "0.19.0", features = ["serde-serialize"] }
ndarray = { version = "0.13.0", features = ["rayon", "serde-1"] }
ndarray-stats = "0.3.0"
netcdf = "0.4.0"
physical_constants = "0.3.0"
rand = "0.7.3"
rayon = "1.3.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.45"
terminal_size = "0.1.10"

# Development profile: "cargo build".
[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
panic = 'unwind'
incremental = true
overflow-checks = true

# Release profile: "cargo build --release"
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = false

# Testing profile: "cargo test"
[profile.test]
opt-level = 0
debug = 2
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
incremental = true
overflow-checks = true

# Benchmark profile: "cargo bench" (and "cargo test --release)".
[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
incremental = false
overflow-checks = false
